--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -2,7 +2,7 @@
 <div class="container">
     {{ with .Site.GetPage "/about" }}
     <div class="row">
-        <div class="col-12 px-0">
+        <div class="col-12 px-3 px-sm-3">
         {{ .Content }}
         </div>
     </div>
