--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<main class="container-fluid px-0 px-sm-3">
+<main class="container-fluid px-0">
     <section>
         {{ with .Content }}
             <section>
