--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -1,8 +1,8 @@
-<div class="container-fluid shadow p-3 mb-2 mt-4 bg-white rounded-lg">
-    <div class="row justify-content-center">
-        <div class="col text-center">
-            <div class="custom-sumary-title pt-1 pt-md-2">
-                <a class="custom-link-color" href='{{ .Permalink }}'> {{ .Title }}</a>
+<div class="container-fluid mb-2 mt-2 mt-sm-4 py-2 bg-white custom-border-top position-relative">
+    <div class="row justify-content-center position-static">
+        <div class="col text-center position-static">
+            <div class="custom-sumary-title pt-1 pt-md-2 position-static">
+                <a class="custom-link-color stretched-link" href='{{ .RelPermalink }}'> {{ .Title }}</a>
             </div>
             <div class="w-100"></div>
             <div class="custom-post-meta text-muted">
@@ -21,18 +21,10 @@
         </div>
     </div>
     {{ with .Page.Params.summaryImg }}
-    <img src="{{ . }}" alt="" class="img-fluid" style="max-width: 90%; box-shadow:0 0 0px #4f5522;">
+    <img src="{{ . }}" alt="" class="img-fluid" style="max-width: 95%; box-shadow:0 0 0px #4f5522;">
     {{ else }}
         <div class="row justify-content-center px-1 px-sm-3 mt-1 mt-md-2">
             <p class="custom-text-muted">{{ .Summary }}</p>     
         </div>
     {{ end }}
-    <div class="row justify-content-center mb-1 mb-md-2">
-        <a href='{{ .RelPermalink }}' class="btn custom-btn-primary btn-sm px-2 px-md-4 py-1 py-md-2" role="button" aria-pressed="true">
-            阅读更多
-            <svg class="icon" aria-hidden="true">
-                <use xlink:href="#icon-icon"></use>
-            </svg>
-        </a>
-    </div>
 </div>
