--- a/layouts/partials/home_header.html
+++ b/layouts/partials/home_header.html
@@ -1,4 +1,4 @@
-<header class="container mt-1 mt-md-5" id="header-id">
+<header class="container" id="header-id">
     <div class="row justify-content-center">
         <div class="col-12 text-center">
             <div class="my-3" style="font-size:2rem;">
@@ -16,13 +16,13 @@
     </div>
     <div class="row justify-content-center">
         <nav class="navbar navbar-expand-md justify-content-center">
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <div class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span> 
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-xinxiaoxixiangxiajiantou"></use>
                     </svg>
                 </span>
-            </button>
+            </div>
             <div class="border-warning collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav d-flex">
                     {{ $currentPage := . }}
