--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,18 +1,18 @@
-<footer class="border-top mt-3 py-2" style="text-align: center;">
+<footer class="custom-border-top mt-3 py-3 custom-footer">
     <aside>
-        <span>Copyright&nbsp;&COPY;&nbsp;{{ if eq (now.Format "2006") "2018"}}2018{{ else }}2018-{{ now.Format "2006" }}{{ end }}</span>
+        <span>{{ .Site.Title }}&nbsp;&COPY;&nbsp;{{ if eq (now.Format "2006") "2018"}}2018{{ else }}2018-{{ now.Format "2006" }}{{ end }}</span>
     </asite>
     <aside>
         <span>
         <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-powerstation"></use>
         </svg>
-        Power By <a href="https://gohugo.io/" class="custom-footer-a">Hugo</a>&shortmid;</span>
+        POWER BY <a href="https://gohugo.io/" class="custom-footer-a">HUGO</a>&shortmid;</span>
         <span>
         <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-library_theme_select"></use>
         </svg>
-        Theme By <a href="https://github.com/Busui/gohugo-theme-yellow" class="custom-footer-a">Busui</a></span>
+        THEME BY <a href="https://github.com/Busui/gohugo-theme-yellow" class="custom-footer-a">BUSUI</a></span>
     </aside>
     <div class="footerest">
         <span>
