--- a/layouts/partials/postCopyRight.html
+++ b/layouts/partials/postCopyRight.html
@@ -10,6 +10,6 @@
     <div>
         <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-suoding"></use>
-        </svg>版权：此文章版权归<a href="https://codepool.top">CodePool</a>所有。允许转载，但禁止商用！
+        </svg>版权：此文章版权归<a href="https://codepool.top">{{ .Site.Title }}</a>所有。允许转载，但禁止商用！
     </div>
 </div>
