update bg color for summary block

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -1,4 +1,6 @@
 {{ define "main" }}
+{{ $color := .Site.Data.borderColor.bgcolor }}
+{{ $colorCount := 0 }}
 <main class="container-fluid px-0">
     <section>
         {{ with .Content }}
@@ -8,7 +10,40 @@
         {{ end }}
         {{ range .Paginator.Pages }}
         <article>
-            {{ .Render "summary"}}
+            <div class="container-fluid mb-2 mt-2 mt-sm-4 py-2 bg-white custom-border-top position-relative">
+                <div class="row justify-content-center position-static">
+                    <div class="col text-center position-static">
+                        <div class="custom-sumary-title pt-1 pt-md-2 position-static">
+                            <a class="custom-link-color stretched-link" href='{{ .RelPermalink }}'> {{ .Title }}</a>
+                        </div>
+                        <div class="w-100"></div>
+                        <div class="custom-post-meta text-muted">
+                            <span>
+                                <svg class="icon" aria-hidden="true">
+                                <use xlink:href="#icon-time"></use>
+                                </svg>
+                                {{- .Date.Format "2006-01-02" -}}
+                            </span>&nbsp;&nbsp;
+                            <span >
+                              <svg class="icon" aria-hidden="true">
+                                  <use xlink:href="#icon-count"></use>
+                              </svg>
+                              {{- .WordCount -}} 字
+                          </span></div>
+                    </div>
+                </div>
+                {{ with .Page.Params.summaryImg }}
+                <img src="{{ . }}" alt="" class="img-fluid" style="max-width: 95%; box-shadow:0 0 0px #4f5522;">
+                {{ else }}
+                    <div class="row justify-content-center">
+                    <div class="col-11 {{ index $color $colorCount}} rounded shadow-sm d-flex justify-content-center align-items-center" style="min-height: 350px;">
+                        <p class="custom-text-muted">{{ .Summary }}...</p>     
+                    </div>
+                    </div>
+                    {{ $colorCount = add $colorCount 1 }}
+                    {{ $colorCount = mod $colorCount (len $color) }}
+                {{ end }}
+            </div>
         </article>
         {{ end }}
     </section>
