--- a/layouts/_default/summary.html
+++ b/layouts/_default/summary.html
@@ -23,8 +23,14 @@
     {{ with .Page.Params.summaryImg }}
     <img src="{{ . }}" alt="" class="img-fluid" style="max-width: 95%; box-shadow:0 0 0px #4f5522;">
     {{ else }}
-        <div class="row justify-content-center px-1 px-sm-3 mt-1 mt-md-2">
+        {{ $color := .Site.Data.borderColor.bgcolor }}
+        {{ $colorCount := 0 }}
+        <div class="row justify-content-center">
+        <div class="col-11 {{ index $color $colorCount}} rounded shadow-sm d-flex justify-content-center align-items-center" style="min-height: 350px;">
             <p class="custom-text-muted">{{ .Summary }}</p>     
         </div>
+        </div>
+        {{ $colorCount = add $colorCount 1 }}
+        {{ $colorCount = mod $colorCount (len $color) }}
     {{ end }}
 </div>
