--- a/layouts/partials/home_header.html
+++ b/layouts/partials/home_header.html
@@ -16,13 +16,13 @@
     </div>
     <div class="row justify-content-center">
         <nav class="navbar navbar-expand-md justify-content-center">
-            <div class="navbar-toggler" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler custom-buttom" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span> 
                     <svg class="icon" aria-hidden="true">
                         <use xlink:href="#icon-xinxiaoxixiangxiajiantou"></use>
                     </svg>
                 </span>
-            </div>
+            </button>
             <div class="border-warning collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav d-flex">
                     {{ $currentPage := . }}
