ajusting mobile end

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -36,7 +36,7 @@
                 <img src="{{ . }}" alt="" class="img-fluid" style="max-width: 95%; box-shadow:0 0 0px #4f5522;">
                 {{ else }}
                     <div class="row justify-content-center">
-                    <div class="col-11 {{ index $color $colorCount}} rounded shadow-sm d-flex justify-content-center align-items-center" style="min-height: 350px;">
+                    <div class="col-11 {{ index $color $colorCount}} rounded shadow-sm d-flex justify-content-center align-items-center custom-summary-height">
                         <p class="custom-text-muted">{{ .Summary }}...</p>     
                     </div>
                     </div>
