filter the draft post in categories and fix some css bugs

--- a/layouts/archive/list.html
+++ b/layouts/archive/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-<div class="hr-box my-4">
+<div class="hr-box my-4 p-2">
     <div class="hr-box-sm hr-orange"></div>
     <div class="hr-box-sm hr-yellow"></div>
     <div class="hr-box-sm hr-purple "></div>
