--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -1,5 +1,5 @@
-{{ define "main" }}
-<div class="container">
+{{ define "other_main" }}
+<div>
     {{ with .Site.GetPage "/about" }}
     <div class="row">
         <div class="col-12 px-3 px-sm-3">
