--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="custom-border-top mt-3 py-3 custom-footer">
+<footer class="custom-footer py-2">
     <aside>
         <span>{{ .Site.Title }}&nbsp;&COPY;&nbsp;{{ if eq (now.Format "2006") "2018"}}2018{{ else }}2018-{{ now.Format "2006" }}{{ end }}</span>
     </asite>
