--- a/layouts/partials/postCopyRight.html
+++ b/layouts/partials/postCopyRight.html
@@ -4,7 +4,7 @@
         <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-woshizuozhe"></use>
         </svg>作者：
-        <a href="{{- .Page.Params.AuthorLink -}}">{{- .Page.Params.Author }}</a>
+        <a href="{{- .Page.Params.AuthorLink -}}">{{- .Site.Author.name }}</a>
         </span>
     </div>
     <div>
