--- a/layouts/tags/list.html
+++ b/layouts/tags/list.html
@@ -31,8 +31,8 @@
     <div class="hr-box-sm hr-red"></div>
 </div>
 {{ end }}
-{{ define "main" }}
-<div class="row justify-content-center px-4" style="min-height: 70vh;">
+{{ define "other_main" }}
+<div class="row justify-content-center px-2 px-md-4" style="min-height: 70vh;">
     <div class="col-12 col-md-10 pb-5">
         <div class="gradient-box">
             <div>
