--- a/layouts/archive/list.html
+++ b/layouts/archive/list.html
@@ -1,5 +1,5 @@
-{{ define "main" }}
-<div class="hr-box my-4 p-2">
+{{ define "other_main" }}
+<div class="hr-box my-4">
     <div class="hr-box-sm hr-orange"></div>
     <div class="hr-box-sm hr-yellow"></div>
     <div class="hr-box-sm hr-purple "></div>
@@ -7,7 +7,7 @@
     <div class="hr-box-sm hr-blue "></div>
     <div class="hr-box-sm hr-red"></div>
 </div>
-<div class="row justify-content-center px-3">
+<div class="row justify-content-center px-2">
     <div class="col-12 col-md-10 pb-5">
         <div class="gradient-box">
             <div>
