change distance between container

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -12,7 +12,7 @@
         <svg class="icon" aria-hidden="true">
             <use xlink:href="#icon-library_theme_select"></use>
         </svg>
-        THEME BY <a href="https://github.com/Busui/gohugo-theme-yellow" class="custom-footer-a">BUSUI</a></span>
+        THEME BY <a href="https://github.com/Busui/gohugo-theme-yellow" class="custom-footer-a">{{- .Site.Author.name }}</a></span>
     </aside>
     <div class="footerest">
         <span>
