--- a/layouts/categories/list.html
+++ b/layouts/categories/list.html
@@ -1,7 +1,7 @@
 {{ define "other_main" }}
 {{ $color := .Site.Data.borderColor.color }}
 {{ $colorCount := 0 }}
-<div class="row justify-content-center my-2 pb-4 my-md-4" style="min-height: 60vh;">
+<div class="row justify-content-center my-2 pb-4 my-md-2 pt-2 custom-border-top" style="min-height: 70vh;">
     <div class="col-md-10 col-11 bg-light" id="accordionExample">
         {{ range $key, $value := .Site.Taxonomies.categories }}
                 <button class="custom-buttom w-100 mt-2" style="background-color:#f8f9fa; outline-style: none;">
